fix: Layout corrections * The HTML is less complex and thus easier to maintain and more performant. * Generator list items are more readable and utilize their space better. * Generators and generated words are clearly separated.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,10 @@
 .word-generator {
+  &-application-form {
+    display: grid;
+    grid-template-columns: minmax(25rem, 1fr) 2fr;
+    gap: 1rem;
+  }
+
   &-unstyled-list {
     list-style: none;
     text-decoration: none;
@@ -100,5 +106,15 @@
 
   &-controls-bar {
     height: 1.8rem;
+  }
+
+  &-results-textarea {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  &-scrollable {
+    overflow-y: scroll;
   }
 }
